<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/enter_message"
            android:inputType="text"
            android:imeOptions="actionSend"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnClearData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/svLogView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvLogView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp" />

        </ScrollView>

        <Button
            android:id="@+id/btnQr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>